--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "path": "^0.12.7",
-    "stripe": "^17.2.0"
+    "stripe": "^17.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7",
